...
                  Navigator.pushReplacementNamed(context, MyHomePage.routeName),
              icon: Icon(
                Icons.arrow_back,
              ),
            ),
            backgroundColor: Theme.of(context).colorScheme.inversePrimary,
            title: Text("Developper Test"),
          ),
          body: preferences
              ? Padding(
                  padding: const EdgeInsets.all(10),
                  child: Column(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      Row(
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          Text(
                            "Debugger API",
                            style: GoogleFonts.inter(
                              fontSize: 16.0,
                              fontWeight: FontWeight.bold,
                            ),
                          ),
                          Switch(
...
